# ivory

./: .gitignore  CMakeLists.txt  README.md  config.h.in  config.vapi
cmake/: FindVala.cmake  UseVala.cmake
resources/: CMakeLists.txt  resources.xml
resources/html/: file1.html  file2.html
resources/ui/: main_window.ui  tab.ui
src/: .gitignore  CMakeLists.txt  ivoryapplication.vala  ivorymain.vala  ivorymainwindow.vala  ivorytab.vala  ivorytablabel.vala  ivoryuriparser.vala  ivorywebsettings.vala
tests/: CMakeLists.txt  historybuttons.vala
vapi/: .gitignore  CMakeLists.txt
